applications/rustfs-cluster/overlays/use1/ingress-external.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rustfs-external
  namespace: rustfs
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`storage.vngenterprise.com`)
      kind: Rule
      services:
        - name: rustfs
          port: 9000
  tls:
    store:
      name: default
      namespace: traefik
